--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/code/html.css.js/work/online lessons on creating a website/css/style.css">
+    <link rel="stylesheet" href="/work/online-lessons/css/style.css">
     <title>Сборка компьютера</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="div_header">
             <!--ссылка на главную страницу-->
             <a href="#" class="header_logo">
-                <img src="/code/html.css.js/work/online lessons on creating a website/img/Logo.svg" alt="nope)">
+                <img src="/work/online-lessons/img/Logo.svg" alt="nope)">
             </a>
             <!--верхнее меню(с кнопкой)-->
             <div class="header_menu">
@@ -64,7 +64,7 @@
             </div>
             <!--задний фон-->
             <div class="display_background">
-                <img src="/code/html.css.js/work/online lessons on creating a website/img/main-screen__bgc.svg" alt="nope)">
+                <img src="/work/online-lessons/img/main-screen__bgc.svg" alt="nope)">
             </div>
         </section>
 
@@ -87,7 +87,7 @@
                     </div>
                     <!--фото-->
                     <div class="foto">
-                        <img src="/code/html.css.js/work/online lessons on creating a website/img/about__img.svg" alt="nope)">
+                        <img src="/work/online-lessons/img/about__img.svg" alt="nope)">
                     </div>
                 </div>
             </div>
